--- a/styles.scss
+++ b/styles.scss
@@ -499,9 +499,9 @@ footer {
     margin-bottom: 10px;
 }
 
-.contract-item {
-    cursor: pointer;
-}
+// .contract-item {
+//     cursor: pointer;
+// }
 
 .modal {
     display: none;
@@ -623,8 +623,11 @@ footer {
     border-radius: 10px;
     padding: 0px;
     margin: 10px;
-    cursor: pointer;
     position: relative;
+    h2 {
+        cursor: pointer;
+        font-size: 1.1rem;
+    }
 }
 
 .contract-item:hover {
