--- a/styles.scss
+++ b/styles.scss
@@ -33,8 +33,13 @@ main {
     min-height: 76vh;
     text-align: right;
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
+    h2{
+        font-size: 1.2rem;
+    }
 }
 
 .form-wizard {
