--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-@charset "UTF-8";
-/* Variables */
-/* Base Styles */
 body {
   margin: 0;
   padding: 0;
@@ -11,17 +8,13 @@ body {
   text-align: right;
   direction: rtl;
 }
-body button {
-  font-family: "Vazir", Arial, sans-serif;
-}
 body *::-moz-placeholder {
   font-family: "Vazir", Arial, sans-serif;
 }
-body *::placeholder {
+body button, body *::placeholder {
   font-family: "Vazir", Arial, sans-serif;
 }
 
-/* Main Content */
 main {
   margin: 30px 0;
   min-height: 76vh;
@@ -51,7 +44,6 @@ main h2 {
 .step {
   display: none;
 }
-
 .step.active {
   display: flex;
   flex-direction: column;
@@ -106,18 +98,12 @@ button {
   border-radius: 5px;
   cursor: pointer;
 }
-
-.actions button {
-  float: right;
-}
-
-.actions button:first-child {
+button:first-child {
   float: left;
   background-color: #ccc;
   color: #000;
 }
 
-/* Form Wizard Stages Display */
 .stage-display {
   display: flex;
   align-items: center;
@@ -184,23 +170,7 @@ button {
   color: #007bff;
 }
 
-.stage-half-line {
-  flex: 0.5;
-  height: 2px;
-  background-color: #ccc;
-  margin: 0;
-  position: relative;
-  background-color: #ccc;
-}
-.stage-half-line.active-line {
-  background-color: #007bff;
-  animation: fillLine 0.5s linear forwards;
-}
-.stage-half-line.blue-line {
-  background-color: #007bff;
-}
-
-.stage-line {
+.stage-half-line, .stage-line {
   flex: 1;
   height: 2px;
   background-color: #ccc;
@@ -208,7 +178,7 @@ button {
   position: relative;
   background-color: #ccc;
 }
-.stage-line.active-line {
+.stage-half-line.active-line, .stage-line.active-line {
   background-color: #007bff;
   animation: fillLine 0.5s linear forwards;
 }
@@ -239,12 +209,10 @@ button {
     width: 100%;
   }
 }
-/* Additional Styles */
 .bold {
   font-weight: bold;
 }
 
-/* Header Styles */
 header {
   background-color: #fff;
   color: #fff;
@@ -261,7 +229,6 @@ header .logo {
   height: -moz-fit-content;
   height: fit-content;
   padding: 0;
-  display: flex;
 }
 header .logo img {
   width: 100px;
@@ -287,7 +254,6 @@ header .hamburger {
   margin-right: 20px;
 }
 
-/* Sidebar Styles */
 .sidebar {
   position: fixed;
   top: 0;
@@ -303,7 +269,6 @@ header .hamburger {
   transform: translateX(100%);
   transition: transform 0.3s ease-in-out;
   z-index: 999;
-  /* Media query for mobile devices */
 }
 .sidebar .menu {
   list-style: none;
@@ -357,7 +322,6 @@ header .hamburger {
     display: block;
   }
 }
-/* Footer Styles */
 footer {
   background-color: #f2f2f2;
   padding: 20px;
@@ -442,17 +406,6 @@ footer .footer-address {
   margin-bottom: 10px;
 }
 
-.modal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.4);
-}
-
 .modal-content {
   background-color: #fefefe;
   margin: 15% auto;
@@ -470,8 +423,7 @@ footer .footer-address {
 .modal-content label {
   margin-bottom: 5px;
 }
-.modal-content input,
-.modal-content textarea {
+.modal-content input, .modal-content textarea {
   padding: 8px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
@@ -490,22 +442,6 @@ footer .footer-address {
   background-color: #0056b3;
 }
 
-.close {
-  color: #aaa;
-  float: left;
-  font-size: 28px;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-/* مودال */
 .modal {
   display: none;
   position: fixed;
@@ -517,9 +453,7 @@ footer .footer-address {
   overflow: auto;
   background-color: rgba(0, 0, 0, 0.5);
 }
-
-/* محتوای مودال */
-.modal-content {
+.modal .modal-content {
   background-color: white;
   margin: 10% auto;
   padding: 20px;
@@ -527,7 +461,6 @@ footer .footer-address {
   width: 50%;
 }
 
-/* بستن مودال */
 .close {
   color: #aaaaaa;
   float: right;
@@ -535,9 +468,7 @@ footer .footer-address {
   font-weight: bold;
   cursor: pointer;
 }
-
-.close:hover,
-.close:focus {
+.close:hover, .close:focus {
   color: #000;
   text-decoration: none;
   cursor: pointer;
@@ -563,31 +494,25 @@ footer .footer-address {
   cursor: pointer;
   font-size: 1.1rem;
 }
-
 .contract-item:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-
 .contract-item p {
   margin: 8px 0;
 }
-
 .contract-item p:first-child {
   font-weight: bold;
   position: relative;
 }
-
 .contract-item .edit-icon,
 .contract-item .delete-icon {
   margin-right: 8px;
   cursor: pointer;
 }
-
 .contract-item .edit-icon:hover,
 .contract-item .delete-icon:hover {
   color: #007bff;
 }
-
 .contract-item .content-text {
   padding: 10px 16px;
 }/*# sourceMappingURL=styles.css.map */
