--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,5 @@
 // Variables
-$max-width: 500px;
+$max-width: 600px;
 $border-color: #ccc;
 $border-radius: 5px;
 $action-bg: #007bff;
@@ -37,6 +37,7 @@ main {
 
   h2 {
     font-size: 1.2rem;
+    padding: 0 16px;
   }
 }
 
@@ -50,6 +51,13 @@ main {
   background-color: #fff;
   margin: 0 16px;
   height: fit-content;
+}
+
+@media screen and (max-width: 768px) {
+    .form-wizard {
+        max-width: $max-width;
+        width: 80%;
+    }
 }
 
 .step {
