--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,28 @@ main h2 {
   display: flex;
   flex-direction: column;
 }
+.step .step-counter-container .line-right {
+  width: 2px;
+  height: calc(100% - 30px);
+  background-color: #deb100;
+}
+.step .step-counter-container .circle {
+  background-color: #deb100;
+  color: #fff;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.step .step-counter {
+  width: 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
 .step-heading {
   font-size: 18px;
