--- a/styles.scss
+++ b/styles.scss
@@ -67,6 +67,31 @@ main {
     display: flex;
     flex-direction: column;
   }
+  .step-counter-container {
+    .line-right {
+      width: 2px;
+      height: calc(100% - 30px);
+      background-color: #deb100;
+    }
+    .circle {
+      background-color: #deb100;
+      color: #fff;
+      border-radius: 50%;
+      width: 20px;
+      height: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+  .step-counter {
+    // position: absolute;
+    width: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .step-heading {
